# deterministic_serving_stack

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  flake.nix  pyproject.toml
.github/: CODEOWNERS
cmd/: README.md
demo/: run_demo.py
deploy/: README.md
docs/: README.md  RELEASE_POLICY.md  e2e-determinism-report.html  manifest-field-registry.md  manifest-v2-field-report.md  manifest_endpoint_demo.html  manifest_field_report.md  manifest_fields.csv  networkdet_cross_node_viz.html
experiments/: D6_MULTINODE_DETERMINISM_REPORT.md  d6-lambda-rollout-log.md  million_token_determinism.py  run_tiered.py
experiments/memory_wipe/: .gitignore  README.md  pyproject.toml
experiments/memory_wipe/docs/: findings.md
experiments/memory_wipe/docs/plans/: benchmark.md  experiment.md  phase1.md
experiments/memory_wipe/plan/: conversation.md  modifications.md
experiments/memory_wipe/scripts/: benchmark.py  compute_ceilings.py  inventory.sh  inventory_a10.py  inventory_full.py  probe_limits.py  probe_reliability.py  provision_gh200.sh  run_experiment.py  sweep.py
experiments/memory_wipe/src/pose/: noise.py  protocol.py  report.py  verifier.py
experiments/memory_wipe/src/pose/memory/: hbm.py
experiments/memory_wipe/tests/: conftest.py  test_devurandom.py  test_dram.py  test_hbm.py  test_hwinfo.py  test_memmap.py  test_noise.py  test_nvme.py  test_protocol.py  test_prover.py  test_report.py  test_smoke.py  test_system.py  test_tracer.py  test_verifier.py
lockfiles/: dbrx-pp4-multinode.lockfile.json  dbrx-tp4-multinode.lockfile.json
modules/: README.md
(+376 files in other folders)
