[project]
name = "pose"
version = "0.1.0"
description = "PoSE-DB: Proof of Secure Erasure with Distance Bounding"
readme = "README.md"
authors = [
    { name = "jon", email = "jonathan.n@u.nus.edu" }
]
requires-python = ">=3.10"
dependencies = [
    "cryptography>=44.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "cuda: requires NVIDIA GPU with CUDA",
    "nvme: requires NVMe block device access",
    "slow: takes more than 10 seconds",
]
